fixed codedeploy settings